
Package: R.utils
================

Version: 0.8.2 [2006-10-xx]
o Added argument 'modifiedOnly' to sourceTo() so that a file is only 
  sourced if it has been modified since the last call.  Note that this
  argument is passed on by sourceDirectory() too.

Version: 0.8.1 [2006-09-16]
o BUG FIX: sourceDirectory(..., onError="error") would quietly ignore
  errors in source().
o Added methods more() and less() to the Verbose class.

Version: 0.8.0 [2006-08-21]
o Added isOpen() to check if there is another connection opened to 
  a specific file.
o pushState() of Verbose generated an unnecessary warning due to 
  a typo.

Version: 0.7.9 [2006-07-17]
o The capture() method in Verbose modified a text connection while it was
  still open; from R v2.4.0 this is not allowed.  Thanks Brian Ripley for
  pointing this out.

Version: 0.7.8 [2006-05-22]
o Added the TextStatusBar class.

Version: 0.7.7 [2006-03-30]
o The method list in the class-overview help page was missing
  for several classes.
o Added as.double() to Verbose.
o saveAnywhere() of Settings now returns (invisibly) the pathname 
  where the settings were saved.

Version: 0.7.6 [2006-02-15]
o Since the png2() and jpeg2() devices are in this package, the eps() 
  device from R.graphics has been moved here for consistency.

Version: 0.7.5 [2006-02-09]
o as.character.hexmode() is available in R v2.3.0 and forward.  Thus,
  the method is only added by this package for pre-R v2.3.0.

Version: 0.7.4 [2005-12-23]
o Updated getHostname() and getUsername() in System to first try to
  find the details using Sys.info().  After that system environment 
  variable and so on are checked.
o Added argument 'expandTilde=FALSE' to getAbsolutePath() so 
  that tildes (~) are expanded to there corresponding path.
o Now relative paths handle tildes too.
o Added optional automatic timestamping for the Verbose class.
  This is useful for Verbose objects writing to log files.
o BUG FIX: Added protection against infinite loops in isFile(),