@@ -46,6 +46,7 @@ extends \link[R.oo]{Object}\cr
 \tabular{rll}{
  \tab \code{\link[R.utils:getLabel.TextStatusBar]{getLabel}} \tab Gets the current value of a label.\cr
  \tab \code{\link[R.utils:newline.TextStatusBar]{newline}} \tab Writes a newline.\cr
+ \tab \code{\link[R.utils:popMessage.TextStatusBar]{popMessage}} \tab Adds a message above the status bar.\cr
  \tab \code{\link[R.utils:setLabel.TextStatusBar]{setLabel}} \tab Sets the value of a label.\cr
  \tab \code{\link[R.utils:setLabels.TextStatusBar]{setLabels}} \tab Sets new values of given labels.\cr
  \tab \code{\link[R.utils:update.TextStatusBar]{update}} \tab Updates the status bar (visually).\cr
@@ -95,7 +96,11 @@ for (kk in seq(length=nfiles)) {
     setLabel(sb, "progress", 100*kk/nfiles)
     if (kk \%\% 10 == 1 || kk == nfiles)
       setLabel(sb, "file", substr(basename(file), 1, 44))
-    update(sb)
+
+    size <- file.info(file)$size/1024;
+    # popMessage() calls update() too
+    popMessage(sb, sprintf("Processing \%s (\%.2fkB)",
+                                       basename(file), size))
   }
 
   # Read the file
@@ -104,7 +109,7 @@ for (kk in seq(length=nfiles)) {
 
   # Emulate slow process
   if (interactive())
-    Sys.sleep(rexp(1, rate=20))
+    Sys.sleep(rexp(1, rate=40))
 
   # Update the status bar
   if (sb) {
